src/test/ui/const-generics/issue-93647.rs
struct X<const N: usize = {
    (||1usize)()
    //~^ ERROR cannot call
}>;

fn main() {}
